# Magnetie

./: .env  .env.example  Cargo.toml  LICENSE  LICENSE_CN  README.md  pyproject.toml  requirements.txt
src/: cli.py  logging_config.py  main.rs
src/abi/: magnet_abi.json
src/core/: blockchain.py  miner.py
src/utils/: hashing.py
tests/: validate_abi.py
